# portfolio-website-django-v1

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: .gcloudignore  app.yaml  main.py  requirements.txt
src/about/: admin.py  models.py  urls.py  views.py
src/about/migrations/: 0001_initial.py  0002_skill_alter_timelineentry_content.py  0003_alter_timelineentry_excerpt.py  0004_alter_timelineentry_excerpt.py  0005_timelineentry_order_number.py
src/about/static/about/: about.css
src/about/templates/: about.html
src/blog/: admin.py  models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_remove_post_categories_remove_post_excerpt_and_more.py  0003_post_published_at.py  0004_alter_post_published_at.py  0005_post_excerpt.py  0006_category_post_categories.py  0007_post_image_size_alter_post_categories.py  0008_alter_post_image_size.py  0009_alter_post_excerpt.py
src/blog/static/blog/: blog.css
src/blog/templates/: blog.html
src/contact/: urls.py  views.py
src/contact/templates/: contact.html  success.html
src/home/: urls.py
src/home/templates/: home.html
src/portfolio/: settings.py  urls.py
src/projects/: models.py  urls.py  views.py
src/projects/migrations/: 0001_initial.py  0002_remove_project_image_project_github_link_and_more.py  0003_project_published_quarter_year.py  0004_project_slug.py  0005_alter_project_slug.py
src/projects/templates/: project-detail.html  projects.html
src/static/: app.css
src/templates/: base.html
src/templates/includes/: navbar.html
(+8 files in other folders)
