[tool.poetry]
name = "portfolio-website-django"
version = "1.0.0"
description = "Portfolio website written in django (first version)"
authors = ["Jack Perry <jack.e.perry@outlook.com>"]
readme = "README.md"
packages = [{include = "portfolio_website_django"}]

[tool.poetry.dependencies]
python = "~3.10"
Django = "^4.1.4"
django-htmx = "^1.13.0"
psycopg2-binary = "^2.9.5"
django-environ = "^0.9.0"
google-cloud-secret-manager = "^2.13.0"
django-storages = {extras = ["google"], version = "^1.13.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
